--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h3 {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 16px;
-    width: 30%;
+    /* width: 30%; */
     max-width: 404px;
     height: 100%;
     padding: 48px;
