--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h3 {
     top: 50px;
     right: 0px;
     cursor: pointer;
-    font-size: 40px;
+    font-size: 2rem;
     margin-right: 5%;
 }
 
@@ -62,7 +62,6 @@ h3 {
     flex-direction: row;
     flex-wrap: wrap;
     gap: 16px;
-    /* width: 30%; */
     max-width: 404px;
     height: 100%;
     padding: 48px;
@@ -70,8 +69,7 @@ h3 {
 }
 
 .icon {
-    width: 55px;
-    height: 55px;
+    width: 60px;
     cursor: pointer;
     transition-duration: .2s;
 }
@@ -134,8 +132,8 @@ h3 {
 }
 
 .ability {
-    width: 80px;
-    height: 90px;
+    width: 25%;
+    /* height: 90px; */
     text-align: center;
     border: 1px solid black;
     cursor: pointer;
