--- a/style.css
+++ b/style.css
@@ -47,22 +47,12 @@ h3 {
     padding: 15px 0px;
 }
 
-#openbtn {
-    display: none;
-    position: absolute;
-    top: 50px;
-    right: 0px;
-    cursor: pointer;
-    font-size: 2rem;
-    margin-right: 5%;
-}
-
 #agent-selection {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 16px;
-    max-width: 404px;
+    flex: .6;
     height: 100%;
     padding: 48px;
     border-right: 1px solid black;
@@ -94,8 +84,7 @@ h3 {
 }
 
 #agent {
-    width: 35%;
-    max-width: 472px;
+    flex: .8;
     height: 100%;
     background: url('https://media.valorant-api.com/agents/e370fa57-4757-3604-3648-499e1f642d3f/background.png') no-repeat center center;
     position: relative;
@@ -115,9 +104,8 @@ h3 {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    padding: 40px 0px 40px 20px;
-    width: 30%;
-    max-width: 404px;
+    padding: 40px 20px 40px 20px;
+    flex: 1;
     height: 100%;
 }
 
